<resources>
    <string name="app_name" translatable="false">WeatherChecker</string>

    <string-array name="alert_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="file_save_error_message">Error while saving data</string>
    <string name="file_load_error_message">Error while loading data</string>
    <string name="network_connection_error_message">Network connection error</string>

    <string name="main_update_city_error_message">Weather update error</string>
    <string name="main_choose_action_dialog">Choose an action</string>
    <string name="main_confirmation_dialog">Are you sure?</string>
    <string-array name="main_city_button_array">
        <item>Weather update</item>
        <item>Edit city</item>
        <item>Delete city</item>
    </string-array>

    <string name="about_title">About</string>
    <string name="about" formatted="false" translatable="false">WeatherChecker\nver 1.1 beta\nAuthor Łukasz Wojtas</string>

    <string name="weather_current">Current</string>
    <string name="weather_daily">Daily</string>
    <string name="weather_hourly">Hourly</string>
    <string name="weather_minutely">Minutely</string>
    <string name="weather_current_title">Current Weather</string>
    <string name="weather_daily_title">Daily Weather</string>
    <string name="weather_hourly_title">Hourly Weather</string>
    <string name="weather_minutely_title">Minutely Weather</string>
    <string name="weather_on_create_error_message">City view initialization error</string>
    <string name="weather_daily_on_click_error_message">Error while trying to change collapsed/expanded view in daily weather</string>
    <string name="weather_hourly_on_click_error_message">Error while trying to change collapsed/expanded view in hourly weather</string>

    <string name="weather_temp" translatable="false">Temp</string>
    <string name="weather_feels_like">Feels like</string>
    <string name="weather_rain">Rain</string>
    <string name="weather_snow">Snow</string>
    <string name="weather_date">Date</string>
    <string name="weather_sunrise">Sunrise</string>
    <string name="weather_sunset">Sunset</string>
    <string name="weather_uvi">UV index</string>
    <string name="weather_visibility">Visibility</string>
    <string name="weather_pressure">Pressure</string>
    <string name="weather_humidity">Humidity</string>
    <string name="weather_dew_point">Dew point</string>
    <string name="weather_clouds">Clouds</string>
    <string name="weather_pop">Probability of precipitation</string>
    <string name="weather_precipitation">Precipitation [mm]</string>
    <string name="weather_wind_speed">Wind speed</string>
    <string name="weather_wind_gust">Wind gust</string>
    <string name="weather_wind_deg">Wind deg</string>
    <string name="weather_temp_day">Day</string>
    <string name="weather_temp_min" translatable="false">Min</string>
    <string name="weather_temp_max" translatable="false">Max</string>
    <string name="weather_temp_night">Night</string>
    <string name="weather_temp_eve">Eve</string>
    <string name="weather_temp_morn">Morn</string>

    <string name="city_title_new">New City</string>
    <string name="city_title_modify">Modify City</string>
    <string name="city_name">Name</string>
    <string name="city_lat">Latitude</string>
    <string name="city_lon">Longitude</string>
    <string name="city_save">Save</string>
    <string name="city_search">Search</string>
    <string name="city_lat_lon_out_of_bounds_error_message">Lat/Lon cannot exceed 180°</string>
    <string name="city_double_parse_error_message">Lat/Lon parsing error</string>
    <string name="city_save_error_message">Fill fields name, lat and lon</string>
    <string name="city_search_error_message">City search error</string>

    <string name="settings_title">Settings</string>
    <string name="settings_units">Units</string>
    <string name="settings_decimals">Decimals</string>
    <string name="settings_precise_decimals">Precise decimals</string>
    <string name="settings_weather_actual_threshold">Weather out of date after</string>
    <string name="settings_weather_actual_threshold_end">hour</string>
    <string name="settings_weather_actual_threshold_end_plural">hours</string>
    <string name="settings_language">Language</string>
    <string name="settings_update_mode">Update on startup</string>
    <string name="settings_update_mode_on">On</string>
    <string name="settings_update_mode_off">Off</string>
    <string name="settings_timeout" translatable="false">Timeout</string>
    <string name="settings_thread_pool" translatable="false">Thread pool</string>
    <string name="settings_app_id" translatable="false">App ID</string>
    <string name="settings_log_mode">Log mode</string>
    <string name="settings_save">Save</string>
    <string name="settings_negative_number_error_message">"Decimals"/"Precise decimals"/"Weather actual threshold" cannot be lower than 0</string>
    <string name="settings_negative_or_zero_number_error_message">"Timeout"/"Thread pool" cannot be lower than 1</string>
    <string name="settings_save_error_message">Settings saving error</string>
    <string-array name="settings_units_array">
        <item>Standard (K + m/s)</item>
        <item>Metric (°C + m/s)</item>
        <item>Imperial (°F + mph/h)</item>
    </string-array>
    <string-array name="settings_language_array">
        <item>Chinese</item>
        <item>Dutch</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="settings_log_mode_array" translatable="false">
        <item>OFF</item>
        <item>ERROR</item>
        <item>WARN</item>
        <item>INFO</item>
        <item>DEBUG</item>
        <item>TRACE</item>
        <item>ALL</item>
    </string-array>
</resources>